@@ -13,6 +13,9 @@ export JAVA_HOME=/everteam/java
 
 export CATALINA_OPTS="$CATALINA_OPTS -Xms512m"
 export CATALINA_OPTS="$CATALINA_OPTS -Xmx2000m"
+export CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=512m"
+
+#ps -ef | grep 'et-[t]omcat' | awk '{print $2}' | xargs kill -9
 
 rm -rf $CATALINA_HOME/logs/*
 
